nav section done

--- a/index.html
+++ b/index.html
@@ -5,10 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+    <!-- google fonts style link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <!-- google font stye link end -->
+
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body class="open-sans-normal">
+    <header class="nav-body header">
+        <nav class="nav-container">
+            <h1 class="header-name-container">Ma<span class="header-name">r</span>y</h1>
+            <ul>
+                <li>
+                    <a href="">Portfolio</a>
+                    <a href="">Blog</a>
+                    <button class="btn">Hire Me</button>
+                </li>
+            </ul>
+        </nav>
+        <main class="developer-info-container">
+            <div class="developer-info">
+                <h1>Hi, I am <br><span>Mary Hardy</span></h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <div class="button-container">
+                    <button class="btn">Download CV</button>
+                    <button class="btn">Contact</button>
+                </div>
+            </div>
+            <div class="developer-img-container">
+                <img class="developer-img" src="images/hardy.png" alt="developer-image">
+            </div>
+        </main>
+    </header>
 
+    <main></main>
+
+    <footer></footer>
 </body>
 
 </html>
