--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     behaved moments.</p>
                 <div class="button-container">
                     <button class="btn">Download CV</button>
-                    <button class="btn">Contact</button>
+                    <button class="btn-secondary">Contact</button>
                 </div>
             </div>
             <div class="developer-img-container">
@@ -43,9 +43,167 @@
         </main>
     </header>
 
-    <main></main>
+    <main>
+        <!-- about section -->
+        <section class="section-container">
+            <div class="about-container">
+                <h3 class="about-title">About Me</h3>
+                <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy
+                    developing simple, clean and slick websites that provide real value to the end user. Thousands of
+                    clients have procured exceptional resulfs while working with me. Delivering work within time and
+                    budget which meets clients requirements in our mata.</p>
+                <div class="about-info">
+                    <div>
+                        <p>Name</p>
+                        <h3>Mary Hardy</h3>
+                    </div>
+                    <div>
+                        <p>Email</p>
+                        <h3>Info@gmail.com</h3>
+                    </div>
+                    <div>
+                        <p>Date of Birth</p>
+                        <h3>11 November 1987</h3>
+                    </div>
+                    <div>
+                        <p>From</p>
+                        <h3>los Angeles, USA</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <footer></footer>
+        <!-- What i do section -->
+        <section class="section-container">
+            <div class="card-container">
+                <h3 class="about-title">What I do</h3>
+                <p class="about-description">I have more than 10 years experience building software for clients all over
+                    the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                    find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="card-info">
+                    <div>
+                        <img src="images/icons/js.png" alt="js">
+                        <h1>Vanilla JavaScript</h1>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor. </p>
+                    </div>
+                    <div>
+                        <img src="images/icons/react.png" alt="react.js">
+                        <h1>React</h1>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor. </p>
+                    </div>
+                    <div>
+                        <img src="images/icons/nodejs.png" alt="node.js">
+                        <h1>Node.js</h1>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor. </p>
+                    </div>
+                    <div>
+                        <img src="images/icons/mongo.png" alt="mongo.js">
+                        <h1>MongoDB</h1>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5
+                            free icons available. Aenean commodo ligula eget dolor. </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- summary section -->
+        <section class="summary-section-container">
+            <h2 style="text-align: center;">A summary of My Resume</h2>
+            <div class="summary-container">
+
+                <div class="education-container">
+                    <h3>My Education</h3>
+                    <div>
+                        <h4>Master in Computer Engineering</h4>
+                        <span>Harvard University / 2015 - 2017</span>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+
+                    <div>
+                        <h4>Master in Computer Engineering</h4>
+                        <span>Harvard University / 2015 - 2017</span>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+
+                    <div>
+                        <h4>Master in Computer Engineering</h4>
+                        <span>Harvard University / 2015 - 2017</span>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="experience-container">
+                    <h3>My Experience</h3>
+                    <div>
+                        <h4>Sr. Font End Developer</h4>
+                        <span>Apple Inc / 2020 - Current</span>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr class="horizontal">
+                    </div>
+
+                    <div>
+                        <h4>Sr. Font End Developer</h4>
+                        <span>Apple Inc / 2020 - Current</span>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+
+                    <div>
+                        <h4>Sr. Font End Developer</h4>
+                        <span>Apple Inc / 2020 - Current</span>
+                        <p>List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button style="display: flex; margin: auto;" class="btn">Download CV</button>
+        </section>
+    </main>
+
+    <footer>
+        <section class="Footer-container">
+            <div class="connect-container">
+                <h2>Let's Connect</h2>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+            </div>
+            <div class="message-container">
+                <h2>Let's Message Me</h2>
+                <div class="message">
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" name="" id="name" placeholder="Your Name">
+                    </div>
+                    <div>
+                        <label for="email">Name</label>
+                        <input type="email" name="" id="email" placeholder="Your Email">
+                    </div>
+                    <div>
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    </div>
+                    <button class="btn">Submit</button>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
