--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- google font stye link end -->
 
     <link rel="stylesheet" href="styles/style.css">
+
+    <!-- fontawesome icon -->
+    <script src="https://kit.fontawesome.com/7a0051261c.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -33,8 +36,12 @@
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.</p>
                 <div class="button-container">
-                    <button class="btn">Download CV</button>
-                    <button class="btn-secondary">Contact</button>
+                    <button class="btn"><span style="margin-right: 5px;"><i
+                                class="fa-solid fa-download"></i></span>Download CV</button>
+                    <button class="btn-secondary"><span style="margin-right: 5px;"><i
+                                class="fa-solid fa-phone"></i></span>Contact</button>
+
+
                 </div>
             </div>
             <div class="developer-img-container">
